# checkers_haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checkers.cabal
libs/gtk2-helpers/src/Game/Board/: BasicTurnGame.hs
libs/gtk2-helpers/src/Graphics/UI/Gtk/Board/: BoardLink.hs  TiledBoard.hs
src/: Checkers.hs  CheckersRules.hs  CheckersUtils.hs  GtkCheckers.hs  Main.hs
src/Data/Board/: GameBoardIO.hs
src/Game/Board/: BasicTurnGame.hs
src/Graphics/UI/Gtk/Board/: BoardLink.hs  TiledBoard.hs
