cabal-version:       >= 1.10
build-type:          Simple

name:                Ridersk
version:             0.1.0
author:              Ridersk
maintainer:          Ridersk
category:            Graphics
description:         A simple board game
stability:           Experimental
extra-source-files:  README

library

  exposed-modules:
    Data.Board.GameBoardIO
    Game.Board.BasicTurnGame
    Graphics.UI.Gtk.Board.BoardLink
    Graphics.UI.Gtk.Board.TiledBoard
    Graphics.UI.Gtk.Entry.FormatEntry
    Graphics.UI.Gtk.Entry.HighlightedEntry
    Graphics.UI.Gtk.Extra.Builder
    Graphics.UI.Gtk.Extra.BuilderTH
    Graphics.UI.Gtk.Helpers.Combo
    Graphics.UI.Gtk.Helpers.FileDialog
    Graphics.UI.Gtk.Helpers.MenuItem
    Graphics.UI.Gtk.Helpers.MessageDialog
    Graphics.UI.Gtk.Helpers.ModelViewNotebookSync
    Graphics.UI.Gtk.Helpers.ModelViewPath
    Graphics.UI.Gtk.Helpers.Multiline.TextBuffer
    Graphics.UI.Gtk.Helpers.Pixbuf
    Graphics.UI.Gtk.Helpers.TreeView
    Graphics.UI.Gtk.Layout.BackgroundContainer
    Graphics.UI.Gtk.Layout.DummyBin
    Graphics.UI.Gtk.Layout.EitherWidget
    Graphics.UI.Gtk.Layout.MaybeWidget
    Graphics.UI.Gtk.StreamChart
    System.Application

  build-depends:
      base >= 4 && < 5
    , template-haskell
    , process
    , cairo
    , gtk
    , gio
    , glib
    , mtl
    , array

  default-language:
    Haskell2010

  hs-source-dirs:
    libs/gtk2-helpers/src/

  ghc-options:
    -Wall
