-- Copyright   : (C) Ivan Perez, 2012-2013; (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
name:                checkers
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez, Lucas Maciel
maintainer:          ivan.perez@keera.co.uk, lucasmacielaguiar@gmail.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

executable checkers
  main-is:             Main.hs

  other-modules:
    Checkers
    GtkCheckers
    Data.Board.GameBoardIO
    Game.Board.BasicTurnGame
    Graphics.UI.Gtk.Board.BoardLink
    Graphics.UI.Gtk.Board.TiledBoard
    Graphics.UI.Gtk.Entry.FormatEntry
    Graphics.UI.Gtk.Entry.HighlightedEntry
    Graphics.UI.Gtk.Extra.Builder
    Graphics.UI.Gtk.Extra.BuilderTH
    Graphics.UI.Gtk.Helpers.Combo
    Graphics.UI.Gtk.Helpers.FileDialog
    Graphics.UI.Gtk.Helpers.MenuItem
    Graphics.UI.Gtk.Helpers.MessageDialog
    Graphics.UI.Gtk.Helpers.ModelViewNotebookSync
    Graphics.UI.Gtk.Helpers.ModelViewPath
    Graphics.UI.Gtk.Helpers.Multiline.TextBuffer
    Graphics.UI.Gtk.Helpers.Pixbuf
    Graphics.UI.Gtk.Helpers.TreeView
    Graphics.UI.Gtk.Layout.BackgroundContainer
    Graphics.UI.Gtk.Layout.DummyBin
    Graphics.UI.Gtk.Layout.EitherWidget
    Graphics.UI.Gtk.Layout.MaybeWidget
    Graphics.UI.Gtk.StreamChart
    System.Application

  other-extensions:    MultiParamTypeClasses, FunctionalDependencies

  build-depends:
    base >= 4 && < 5,
    template-haskell,
    gtk >=0.15 && <0.16,
    mtl >=2.2 && <2.3,
    process,
    cairo,
    gio,
    glib,
    array

  hs-source-dirs:      src

  default-language:    Haskell2010
